--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-hooks-testing-library": "^0.6.0",
     "react-scripts": "3.0.0"
   },
-  "proxy": "http://localhost:8001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -50,5 +49,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
