--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,32 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+  deploy:
+    machine:
+      enabled: true
 
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - '00:a5:39:d1:2c:9c:f1:b0:4d:a1:17:83:25:eb:7d:0b'
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/babs20/scheduler.git master:production
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
